Fixed bug which collapsed header container in Safari only. Set min-height of inner container to 100%, instead of just setting a height property alone.

--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ header {
   -ms-flex-align: center;
   align-items: center;
   margin: 0 auto;
-  height: 100%;
+  min-height: 100%;
 }
 @media (min-width: 767px) {
   .content-wrapper {
