--- a/scss/partials/common/_header.scss
+++ b/scss/partials/common/_header.scss
@@ -11,7 +11,7 @@ header {
   @include align-items($value: center);
 
   margin   : 0 auto;
-  height   : 100%;
+  min-height   : 100%;
 }
 
 #site-logo {
